--- a/1.4/Languages/Japanese/Keyed/Maddy_Update.xml
+++ b/1.4/Languages/Japanese/Keyed/Maddy_Update.xml
@@ -4,6 +4,9 @@
 <Maddy.Update.Title>Maddy 更新情報</Maddy.Update.Title>
 
 <Maddy.Update.label>
+2023/08/10(0.2.1.0):
+*固有のゼノタイプを追加しました
+
 2023/05/25(0.2.0.0):
 *前提MODとしてB.E.P Race Coreが必要になり共通箇所の大幅な削減を行いました
 以前のバージョンを使用している場合髪型や服などの様々なデータが消失しています
